fix: DEV-2669: align the select dropdown items

--- a/src/common/Select/Select.styl
+++ b/src/common/Select/Select.styl
@@ -30,6 +30,9 @@
       max-height 280px
       overflow auto
 
+      .select__option
+        padding-inline: 12px;
+
   &__dropdown_variant_rounded
     &:not(.dropdown__trigger)
       border-radius 4px
